--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,12 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+feedparser = "0.1.0"
 futures = "0.3.31"
+once_cell = "1.21.1"
+qrcode = "0.14.1"
 quick-xml = "0.37.2"
-reqwest = {version = "0.12.15"}
-rss = "2.0.12"
+reqwest = {version = "0.12.15", features = ["blocking"]}
 scraper = "0.23.1"
 serde_json = "1.0.140"
 tokio = {version = "1.44.1", features = ["full"]}
