--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,15 @@ edition = "2024"
 [dependencies]
 feedparser = "0.1.0"
 futures = "0.3.31"
+hex = "0.4.3"
 once_cell = "1.21.1"
 qrcode = "0.14.1"
 quick-xml = "0.37.2"
-reqwest = {version = "0.12.15", features = ["blocking"]}
+reqwest = {version = "0.12.15", features = ["blocking", "json"]}
+retry = "2.0.0"
+rpassword = "7.3.1"
 scraper = "0.23.1"
 serde_json = "1.0.140"
+sha2 = "0.10.8"
 tokio = {version = "1.44.1", features = ["full"]}
+tokio-retry = "0.3.0"
