--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,13 @@ edition = "2024"
 feedparser = "0.1.0"
 futures = "0.3.31"
 hex = "0.4.3"
+indicatif = "0.17.11"
 once_cell = "1.21.1"
 qrcode = "0.14.1"
 quick-xml = "0.37.2"
 reqwest = {version = "0.12.15", features = ["blocking", "json"]}
+reqwest-middleware = "0.4.1"
+reqwest-retry = "0.7.0"
 retry = "2.0.0"
 rpassword = "7.3.1"
 scraper = "0.23.1"
