--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,20 +4,23 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+openssl = { version = "0.10", features = ["vendored"] }
 anyhow = "1.0.98"
-feedparser = "0.1.0"
+clap = { version = "4.5.38", features = ["derive"] }
 futures = "0.3.31"
 hex = "0.4.3"
 indicatif = "0.17.11"
 once_cell = "1.21.1"
 qrcode = "0.14.1"
-quick-xml = "0.37.2"
+quick-xml = {version = "0.37.2", features = ["serialize"]}
+regex = "1.11.1"
 reqwest = {version = "0.12.15", features = ["blocking", "json"]}
 reqwest-middleware = "0.4.1"
 reqwest-retry = "0.7.0"
 retry = "2.0.0"
 rpassword = "7.3.1"
 scraper = "0.23.1"
+serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 sha2 = "0.10.8"
 tokio = {version = "1.44.1", features = ["full"]}
