--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,4 @@ serde_json = "1.0.140"
 sha2 = "0.10.8"
 tokio = {version = "1.44.1", features = ["full"]}
 tokio-retry = "0.3.0"
+arc-swap = "1.7.1"
