--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -35,7 +35,7 @@ jobs:
     - name: add target
       run: rustup target add x86_64-unknown-linux-musl
     - name: install dependencies
-      run: apt update && apt install -y musl-tools
+      run: sudo apt-get update && sudo apt-get install -y musl-tools
     - name: Pull code
       uses: actions/checkout@v4.2.2
     - name: Check format
