--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,9 +14,9 @@ jobs:
     name: build on macOS
     runs-on: macos-15
     steps:
-    - name: add target
+    - name: Add target
       run: rustup target add x86_64-unknown-linux-musl
-    - name: install dependencies
+    - name: Install dependencies
       run: brew install filosottile/musl-cross/musl-cross
     - name: Pull code
       uses: actions/checkout@v4.2.2
@@ -26,15 +26,20 @@ jobs:
       run: cargo build --verbose --release
     - name: Cross compile for Linux
       run: cargo build --verbose --release --target x86_64-unknown-linux-musl
+    - name: Upload the build artifact
+      uses: actions/upload-artifact@v4.6.2
+      with:
+        name: aarch64-apple-darwin
+        path: target/release/bangumi_download
     - name: Run tests
       run: cargo test --verbose
   build_on_linux:
     name: build on Linux
     runs-on: ubuntu-latest
     steps:
-    - name: add target
+    - name: Add target
       run: rustup target add x86_64-unknown-linux-musl
-    - name: install dependencies
+    - name: Install dependencies
       run: sudo apt-get update && sudo apt-get install -y musl-tools
     - name: Pull code
       uses: actions/checkout@v4.2.2
@@ -42,5 +47,10 @@ jobs:
       run: cargo fmt --check
     - name: Build for Linux
       run: cargo build --verbose --release --target x86_64-unknown-linux-musl
+    - name: Upload the build artifact
+      uses: actions/upload-artifact@v4.6.2
+      with:
+        name: x86_64_linux-musl
+        path: target/x86_64-unknown-linux-musl/release/bangumi_download
     - name: Run tests
       run: cargo test --verbose
