--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -25,16 +25,16 @@ jobs:
       - name: Check format
         run: cargo +nightly fmt --check
       - name: Build for macOS
-        run: cargo build --verbose --release
+        run: cargo build --release
       - name: Cross compile for Linux
-        run: cargo build --verbose --release --target x86_64-unknown-linux-musl
+        run: cargo build --release --target x86_64-unknown-linux-musl
       - name: Upload the build artifact
         uses: actions/upload-artifact@v4.6.2
         with:
           name: aarch64-apple-darwin
           path: target/release/bangumi_download
       - name: Run tests
-        run: cargo test --verbose
+        run: cargo test && cargo +nightly miri test
   build_on_linux:
     name: build on Linux
     runs-on: ubuntu-latest
@@ -50,11 +50,11 @@ jobs:
       - name: Check format
         run: cargo +nightly fmt --check
       - name: Build for Linux
-        run: cargo build --verbose --release --target x86_64-unknown-linux-musl
+        run: cargo build --release --target x86_64-unknown-linux-musl
       - name: Upload the build artifact
         uses: actions/upload-artifact@v4.6.2
         with:
           name: x86_64_linux-musl
           path: target/x86_64-unknown-linux-musl/release/bangumi_download
       - name: Run tests
-        run: cargo test --verbose
+        run: cargo test && cargo +nightly miri test
