--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -22,6 +22,8 @@ jobs:
         uses: actions/checkout@v4.2.2
       - name: Install rustfmt
         run: rustup component add --toolchain nightly-aarch64-apple-darwin rustfmt
+      - name: Install Miri
+        run: rustup component add --toolchain nightly-aarch64-apple-darwin miri
       - name: Check format
         run: cargo +nightly fmt --check
       - name: Build for macOS
@@ -47,6 +49,8 @@ jobs:
         uses: actions/checkout@v4.2.2
       - name: Install rustfmt
         run: rustup component add --toolchain nightly-x86_64-unknown-linux-gnu rustfmt
+      - name: Install Miri
+        run: rustup component add --toolchain nightly-x86_64-unknown-linux-gnu miri
       - name: Check format
         run: cargo +nightly fmt --check
       - name: Build for Linux
