--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,8 @@ name = "bangumi_download"
 version = "0.1.0"
 edition = "2024"
 
-[target.'cfg(target_env = "musl")'.dependencies]
-openssl = { version = "0.10", features = ["vendored"] }
+# [target.'cfg(target_env = "musl")'.dependencies]
+# openssl = { version = "0.10", features = ["vendored"] }
 
 [dependencies]
 futures = "0.3.31"
@@ -12,7 +12,7 @@ once_cell = "1.21.1"
 qrcode = "0.14.1"
 quick-xml = { version = "0.37.2", features = ["serialize"] }
 regex = "1.11.1"
-reqwest = { version = "0.12.15", features = ["json"] }
+reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls", "charset", "system-proxy", "h2"] }
 reqwest-middleware = "0.4.1"
 reqwest-retry = "0.7.0"
 scraper = "0.23.1"
@@ -27,10 +27,16 @@ num-traits = "0.2.19"
 rand = "0.9.1"
 base64 = "0.22.1"
 thiserror = "2.0.12"
-ratatui = "0.29.0"
+ratatui = "0.30.0"
 bincode = "2.0.1"
 log = "0.4.27"
-tui-logger = "0.17.3"
+# tui-logger = "0.17.4"
 url = "2.5.4"
 chrono = { version = "0.4.42", features = ["serde"] }
 strum = { version = "0.27.2", features = ["derive"] }
+unicode-segmentation = "1.12.0"
+textwrap = "0.16.2"
+tui-logger = { git = "https://github.com/lhz07/tui-logger.git", branch = "patch-dep" }
+
+[profile.release]
+strip = true
